--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <html>
 <header><title>This is title</title></header>
 <body>
-Hello world !!!
+<h1>Hello world !!!</h1>
+<script src="bundle.js"></script>
+</body>
 </body>
 </html>
