--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,22 @@
-<html>
-<header><title>This is title</title></header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+</head>
 <body>
-<h1>Hello world !!!</h1>
+<h1>Users</h1>
+<table>
+  <thead>
+    <th>&nbsp;</th>
+    <th>Id</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Email</th>
+  </thead>
+  <tbody id="users">
+
+  </tbody>
+</table>
 <script src="bundle.js"></script>
-</body>
 </body>
 </html>
